# amp-postmaster

./: .clangd  .gitattributes  .gitignore  .gitmodules  .markdown-link-check.json  .mega-linter.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile.flex  LICENSE.md  README.md  release-please-config.json
.devcontainer/: Dockerfile
.github/: CODEOWNERS  RELEASE_TEMPLATE.md  SECURITY.md  dependabot.yml  philips-repo.yaml
.github/linters/: actionlint.yml
.github/workflows/: ci.yml  continuous-integration.yml  flex-build-push.yml  linting-formatting.yml  pr-conventional-title.yml  release-build.yml  release-please.yml  wc-continuous-integration.yml
Documents/: HardwareSoftwareInterface.md  Requirements.md  Review sheet Postmaster PCB.xlsm
PCB/: Postmaster BOM.txt
PCB/Postmaster/: Postmaster.brd  Postmaster.kicad_pcb  Postmaster.kicad_prl  Postmaster.kicad_pro  Postmaster.kicad_sch  Postmaster.sch  PostmasterParts.kicad_sym  ethernet.kicad_sch  fp-lib-table  microcontroller.kicad_sch  sym-lib-table
PCB/Postmaster/PostmasterParts.pretty/: PULSE_J00-0065NL.kicad_mod
PCB/Postmaster/production/: Components.csv  positions.csv
cmake/: Config.cmake.in
postmaster/: CMakeLists.txt
postmaster/bootloader/: CMakeLists.txt  Main.cpp  mem_stm32f407.ld  mem_stm32f767.ld  sections.ld
postmaster/discovery/: CMakeLists.txt  Main.cpp
postmaster/flex/: CMakeLists.txt  EchoWebSocketClientFactory.cpp  EchoWebSocketClientFactory.hpp  FlexHttpClient.cpp  FlexHttpClient.hpp  HttpClientAuthenticationDigest.cpp  HttpClientAuthenticationDigest.hpp  Main.cpp
postmaster/frontend/: AuthenticatedHttpPage.cpp  AuthenticatedHttpPage.hpp  CMakeLists.txt  CommaSeparatedKeyValueListParser.cpp  CommaSeparatedKeyValueListParser.hpp  ReportingHttpServer.cpp  ReportingHttpServer.hpp  index.html  style.css  upload.js
postmaster/instantiations/: CMakeLists.txt  Configuration.cpp  Configuration.hpp  EchoServer.cpp  EchoServer.hpp  HttpPageConfiguration.cpp  HttpPageConfiguration.hpp  HttpPageDiscovery.cpp  HttpPageDiscovery.hpp  HttpServer.cpp  HttpServer.hpp  HttpServerFrontEnd.cpp  HttpServerFrontEnd.hpp  Mdns.cpp  Mdns.hpp  MdnsDiscovery.cpp  MdnsDiscovery.hpp  PostmasterConfiguration.proto  SelfProgrammer.hpp  TargetProgrammer.hpp  TargetUart.cpp  TargetUart.hpp  TargetUartEcho.cpp  TargetUartEcho.hpp  UartCreator.hpp  ViewNetworkStatus.cpp  ViewNetworkStatus.hpp  ViewStatus.cpp  ViewStatus.hpp
postmaster/instantiations_st/: CMakeLists.txt  ConvertUart.cpp  ConvertUart.hpp  Display.cpp  Display.hpp  EthernetPostmaster.hpp  Flash.cpp  Flash.hpp  HttpServerSt.cpp  HttpServerSt.hpp  NetworkConnected.hpp
postmaster/postmaster_stm32f407/: CMakeLists.txt  Main.cpp  sections.ld
postmaster/programmer/: CMakeLists.txt  FirmwareReceptor.hpp  FirmwareReceptorReporting.cpp  FirmwareReceptorReporting.hpp  FirmwareReceptorResetTarget.cpp  FirmwareReceptorResetTarget.hpp  FirmwareReceptorResetWhenDone.cpp  FirmwareReceptorResetWhenDone.hpp  FirmwareReceptorToFlash.cpp  FirmwareReceptorToFlash.hpp  FlashAligner.cpp  FlashAligner.hpp  HttpPageFirmware.cpp  HttpPageFirmware.hpp  TargetUartConnection.cpp  TargetUartConnection.hpp
postmaster/programmer/test/: CMakeLists.txt  TestFlashAligner.cpp
postmaster/prototype_win/: CMakeLists.txt  Main.cpp
postmaster/upgrade_pack_builder/: CMakeLists.txt  Main.cpp
